--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 <h1>All Events</h1>
+
+<p th:unless="${events} and ${events.size()}">Nothing</p>
 <ul>
     <th:block th:each = "event : ${events}">
-        <li th:text = "${events}"></li>
+        <li th:text = "${event}"></li>
     </th:block>
 </ul>
 
