--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/> <!-- Note the closing '/' character -->
-    <title>Coding Events</title>
-</head>
-<body>
-<h1>All Events</h1>
-<nav th:replace="fragments :: navigation"></nav>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
-<p th:unless="${events} and ${events.size()}">Nothing</p>
-<ul>
-    <th:block th:each = "event : ${events}">
-        <li th:text = "${event}"></li>
-    </th:block>
-</ul>
+<header th:replace="fragments :: header"></header>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Description</th>
+    </tr>
+    </thead>
+    <tr th:each="event : ${events}">
+        <td th:text="${event.id}"></td>
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
+    </tr>
+</table>
 
 </body>
 </html>
