--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/> <!-- Note the closing '/' character -->
-    <title>Create Event</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments :: head"></head>
 <body>
-<h1>Create Event</h1>
-<nav th:replace="fragments :: navigation"></nav>
-<form method = "post" action="/events/create">
-    <input type = "text" name = "eventName">
-    <input type = "submit" value = "Create Event">
+
+<header th:replace="fragments :: header"></header>
+
+<form method="post">
+    <input type="text" name="eventName">
+    <input type="submit" value="Create">
 </form>
 
 </body>
