--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/> <!-- Note the closing '/' character -->
-    <title>Coding Events</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments :: head"></head>
 <body>
-<h1>All Events</h1>
-<nav th:replace="fragments :: navigation"></nav>
 
-<p th:unless="${events} and ${events.size()}">Nothing</p>
+<header th:replace="fragments :: header"></header>
+
 <ul>
-    <th:block th:each = "event : ${events}">
-        <li th:text = "${event}"></li>
+    <th:block th:each="event : ${events}">
+        <li th:text="${event}"></li>
     </th:block>
 </ul>
 
